# DynamoInRotatingSpheres

./: CMakeLists.txt  Doxyfile.in  ERRORCODES  FEATURES  README  TODO  WARNING  Zenodo.txt  run-test.sh
DX/: CMakeLists.txt  ClipCyllinder.net  ColouredIsolines.net  EcutBatch-scal.net.in  EcutBatch-vect-p.net.in  EcutBatch-vect-r.net.in  EquatorialCut.net  MapToSphere.net  McutBatch-scal.net.in  McutBatch-vect-p.net.in  McutBatch-vect-r.net.in  NormMinMax.net  VcutBatch-vect-outside.net.in  Yokoi.net  Yokoi2.net  fieldLines.net  flowAndTemperature.net  rtp2xyz.net  sequencePlotterEquat.net  sequencePlotterMerid.net  sequencePlotterVolume.net
IDL/: o_Contour.pro
cmake/: FindFFTW.cmake
docs/: CMakeLists.txt  userManual.bib  userManual.tex  usermanual.kilepr
docs/figs/: Chebyshev.eps  Chebyshev_dx.eps  CodensityTestEk.eps  TemperatureProfiles.gpi  TemperatureProfiles.tex  radialNodes.txt  radialPoints.eps  radialPoints.gpi
examples/states/BENCHMARK/: drs.conf.template  jobscript
scripts/: CMakeLists.txt  Yokoi-rs-drive.pl  compressdata  drs_KE_plot.sh  drs_cleanRun.sh  drs_plot.sh.in  findPar.sh  latestNormalizedSpectra.sh  monitor_functions.sh  rebuildTimeSeries.sh  resubmitJob.sh  stopRun.sh  uncompressdata
src/: CMakeLists.txt  drs.F90  drsDefs.F90.in  drs_Chebyshev.F90  drs_comp.F90  drs_composition_equation.F90  drs_debug.F90  drs_dims.F90  drs_error_codes.F90  drs_fftw3.F90  drs_field.F90  drs_flow.F90  drs_heat_equation.F90  drs_hypDiff.F90  drs_induction_equation.F90  drs_io.F90  drs_io_conf.F90  drs_io_state.F90  drs_io_units.F90  drs_legendre.F90  drs_lock.F90  drs_momentum_equation.F90  drs_mpi.F90  drs_params.F90  drs_probes.F90  drs_radial.F90  drs_real_space.F90  drs_temp.F90  drs_time.F90  drs_transforms.F90  pureHydroDyn.F90
src/NR/: CMakeLists.txt  lubksb.f90  ludcmp.f90  matinv.f90
src/SHTOOLS/: CMakeLists.txt  PLegendreA_d1.f90  PlmBar_d1.f90  PlmIndex.f90
src/parser/: CMakeLists.txt  parser.F90  parser_error_codes.h
src/parser/tests/: CMakeLists.txt  test_parse.f90
src/parser/tests/data/: parse_test.txt
src/tests/: CMakeLists.txt  TODO-Tests  test_calc_flow.F90  test_drs_Chebyshev.F90  test_drs_Chebyshev_wrapper.sh.in  test_drs_fftw-r2r.F90  test_drs_fftw.F90  test_drs_radial.F90  test_drs_read_conf_v3.F90  test_logFeature.F90  test_remesh-r2r.F90  test_saveDXmeridional.F90  test_vectorField2Divergence.F90  wrap_test_drs_read_conf_v3.sh
src/tests/data/: drs.conf  plot_Chebyshev.gpi
src/utilities/: Benchmark-gen.F90  Benchmark-v2.F90  Benchmark.F90  CMakeLists.txt  Yokoi-plots-rs.F90  Yokoi-plots.F90  drs-get-profile.F90  drs-spectra.F90  drs-state-average.F90  drs-state-change.F90  drs-version.F90  drs2dx.F90  drs_io_DX.F90  drs_renderers.F90
templates/: benchmarkv1.in.template  drs-10105.conf.template  drs-10109.conf.template  drs2dx.in.template  getProfile.conf.template  jobscript-parallel.direct.template  jobscript-parallel.pbs.template  jobscript-parallel.slurm.template  state-average.in.template
